# compiler

./: CMakeLists.txt  LICENSE  main.c
include/: hashmap.h  lexer.h  linkedlist.h  token.h  tokentype.h
src/: hashmap.c  lexer.c  linkedlist.c  token.c  tokentype.c
